# SudokuX

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: backtracking.hpp  constants.hpp  dlx.hpp  gameUI.hpp  generatePuzzle.hpp  parallelBacktracking.hpp  puzzleRender.hpp  simulatedAnnealing.hpp  userGame.hpp
src/: backtracking.cpp  dlx.cpp  gameUI.cpp  generatePuzzle.cpp  main.cpp  parallelBacktracking.cpp  puzzleRender.cpp  simulatedAnnealing.cpp  userGame.cpp
webAssembly/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  shell.html  sudokuSolver.data  sudokuSolver.html  sudokuSolver.js  sudokuSolver.wasm
